--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2691,107 +2691,107 @@ stories:
   domain: http://www.smithvillereview.com/
   link: https://www.smithvillereview.com/video/smithville-stompers-get-ready-perform-jamboree/
 images:
-- name: cargo-ship-cargo-ship-on-sea-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crabapple.jpg
-- name: fence-fence-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
-- name: old-school-house-old-schoolhouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-plentiful.jpg
-- name: walled-garden-walled-garden-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-dali.jpg
-- name: old-granary-field-granaryfield-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-really-hot.jpg
-- name: mistywoods-babyfoot-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-rainbow-festival.jpg
-- name: liberty-back-statue-liberty-back-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-atari-missle.jpg
-- name: copper-circuit-IMG_8472.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_8472.jpg
-- name: razorcliff-razorcliff-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-oily-mcoilface.jpg
-- name: status-berlin-status-berlin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-cinnamon-rolls.jpg
-- name: old-cabin-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gan-vogh.jpg
-- name: nyc-flag-api-conversations-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alberto-giacometti.jpg
-- name: carry-load-carryload-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colorful-dream.jpg
-- name: sand-hand-sand-hand-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-light-dali.jpg
-- name: old-school-house-old-schoolhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
-- name: crow-crow-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crabapple.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-colorful-dream.jpg
-- name: nyc-flag-nycflag-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-monet-one.jpg
-- name: downtheline-downtheline-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-emily-carr.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-neo-instinct.jpg
-- name: server-cloud-server-racks-clouds-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-jap-wav-pr.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-crunch-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crunch-paper.JPG
-- name: old-granary-field-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
-- name: fence-fence-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-storm.jpg
-- name: school-clouds-church-clouds-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-monet-one.jpg
-- name: meadowbutterfly-meadow-butterfly-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-soul.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-umberto-bocc.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
-- name: paris-paris-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-post-modern.jpg
-- name: capital-battle-capitolbattle-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
-- name: old-granary-field-oldhouse-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
-- name: meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-graham-sutherland.jpg
-- name: adam-smith-adam-smith-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-emily-carr.jpg
-- name: mosaic-face-mosaic-face-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit.jpg
-- name: abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-- name: old-barn-old-barn-1500-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-monet-one.jpg
-- name: oldhotel-oldhotel-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-matrix.jpg
-- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
-- name: bordercrossing-bordercrossing-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-cinnamon-rolls.jpg
-- name: wall-cannon-wall-cannon-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-internet-numbers.jpg
-- name: white-house-whitehouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-monet-one.jpg
-- name: beach-clouds-lifeguard-beachclouds-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-alien-goggles.jpg
-- name: capital-battle-capitolbattle-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-hot-spicy.jpg
-- name: dc-statue-dcstatue-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
-- name: eduardo-eduardo-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purple-pond.jpg
-- name: old-house-oldhouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-pablo-blue.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sunday.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-deep-connections.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-deep-connections.JPG
-- name: machine-road-machine-road-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-wav-pr.jpg
-- name: oldhouse-oldhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colored-circuits.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+- name: aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-43-150-800-500-0-max-0--5--5.jpg
+- name: server-cloud-server-racks-clouds-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-hot-spicy.jpg
+- name: oldbarn-oldbarn-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-satan-red.jpg
+- name: aws-s3-riverrapids-riverrapids-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-riverrapids-riverrapids-still.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+- name: status-berlin-status-berlin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-deep-connections.jpg
+- name: server-cloud-server-racks-clouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-soul.jpg
+- name: aws-s3-stories-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-clean-view.jpg
+- name: trucksilo-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
+- name: downtown-los-angeles-downtown-la-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-horiz-circuit.JPG
+- name: miamibeach-miamibeach-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-marcel-duchamp.jpg
+- name: walled-garden-walled-garden-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
+- name: bordercrossing-bordercrossing-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-atari-missle.jpg
+- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
+- name: wind-mills-windmills-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
+- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
+- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
+- name: beach-clouds-lifeguard-beachclouds-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-monet-one.jpg
+- name: fence-mexico-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-rain.jpg
+- name: lincoln-memorial-lincolnmemorial-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crabapple.jpg
+- name: aws-s3-stories-flower-barbed-wire-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-flower-barbed-wire-clean-view.jpg
+- name: school-clouds-church-clouds-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gan-vogh.jpg
+- name: server-racks-door-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-kandinsky-bv.jpg
+- name: dc-statue-dcstatue-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gan-vogh.jpg
+- name: stories-flower-barbed-wire-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-flower-barbed-wire-clean-view.jpg
+- name: rockingchair-face-2-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colorful-blocks.jpg
+- name: oldroad-old-road-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gred-mash.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+- name: nyc-flag-nycflag-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-rain.jpg
+- name: subway-subway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
+- name: carry-load-carryload-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-aqua.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
+- name: status-berlin-status-berlin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-bright-sand.jpg
+- name: oldbarn-oldbarn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-emily-carr.jpg
+- name: white-house-lawn-white-house-window-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dry-skin.jpg
+- name: miamibeach-miamibeach-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dry-skin.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+- name: border-fence-border-fence-on-hill-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-gred-mash.jpg
+- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+- name: server-cloud-server-racks-clouds-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crabapple.jpg
+- name: dragon-desert-desert-dragon-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-collage.jpg
+- name: downtown-los-angeles-downtown-la-blue-electricity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-electricity.JPG
+- name: cargo-ship-cargo-ship-on-sea-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-two.jpg
+- name: aws-s3-stories-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-flower-barbed-wire-nazi-poster.jpg
+- name: border-crossing-bordercrossing-internet-numbers.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-internet-numbers.png
+- name: blossombar-clean-view-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-50-62.jpg
+- name: art-museum-art-museum-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-cinnamon-rolls.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
+- name: mediterranean-mediterranean-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-brush.jpg
 ---
 Molly Nelson, 44, Of Huron.&nbsp;Dutch Farm Floats Possibilities Of Urban Dairy Production.&nbsp;Epic Rides Kicks Off In Downtown Carson City.&nbsp;Female Candidates Challenge Electability Question In Debates.&nbsp;Union Tennis Earns First State Championship.&nbsp;Biden Defends Past Civil Rights Record After Harris Attack.&nbsp;New Times Writers Earn Honors In National Journalism Competitions.&nbsp;New Jersey Tops Nevada In Sports Betting Volume In May.&nbsp;
